@@ -1,3 +1,11 @@
+2004-11-02  Mark D. Baushke  <mdb@cvshome.org>
+
+	* test-getdate.sh (getdate): Do not assume 'diff -u' is
+	universally available.
+	* Makefile.am (getdate_SOURCES): Add allocsa.c sources needed by
+	getdate on Solaris.
+	* Makefile.in: Regenerated.
+
 2004-11-01  Conrad T. Pino  <Conrad@Pino.com>
 
 	* libcvs.dsp: Add "setenv.c", "unsetenv.c", "allocsa.h" and "setenv.h" to project.
